--- a/skill-visualizer/index.html
+++ b/skill-visualizer/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Umamusume Skill Visualizer</title>
+		<title>Umamusume Skill Activation Visualizer</title>
 		<link rel="stylesheet" href="bundle.css">
 	</head>
 	<body>
